input area push

--- a/login/login1.html
+++ b/login/login1.html
@@ -22,7 +22,7 @@
             <section class="email-section">
                 <p>e mail address</p>
                 <input type="email" class="input-wrapper">
-                <button>계속</button>
+                <button class="email-button">계속</button>
             </section>
             <section class="other-page">
                 <p>메일이 없으면 <a href="">가입해</a></p>
@@ -31,10 +31,10 @@
                 or
             </section>
             <section class="social-section">
-                <button class="login-button">
+                <button class="social-button">
                     <img src="img/google-logo.svg" alt="Google logo">
                     <span> Google로 계속하기</span></button>
-                <button class="login-button">
+                <button class="social-button">
                     <img src="img/apple-logo.svg" alt="Apple logo"> 
                     <span> Apple로 계속하기</span></button>
 
