--- a/brand_images/3. logo svg/Untitled-1.html
+++ b/brand_images/3. logo svg/Untitled-1.html
@@ -1,19 +1,15 @@
-<img src="logo group_final-01.svg" alt="Apple logo"><br>
-<img src="logo group_final-02.svg" alt="Apple logo"><br>
-<img src="logo group_final-03.svg" alt="Apple logo"><br>
-<img src="logo group_final-04.svg" alt="Apple logo"><br>
-<img src="logo group_final-05.svg" alt="Apple logo"><br>
-<img src="logo group_final-06.svg" alt="Apple logo"><br>
-<img src="logo group_final-07.svg" alt="Apple logo"><br>
-<img src="logo group_final-08.svg" alt="Apple logo"><br>
-<img src="logo group_final-09.svg" alt="Apple logo"><br>
-<img src="logo group_final-10.svg" alt="Apple logo"><br>
-<img src="logo group_final-11.svg" alt="Apple logo"><br>
-<img src="logo group_final-12.svg" alt="Apple logo"><br>
-<img src="logo group_final-13.svg" alt="Apple logo"><br>
-<img src="logo group_final-14.svg" alt="Apple logo"><br>
-<img src="logo group_final-15.svg" alt="Apple logo"><br>
-<img src="logo group_final-16.svg" alt="Apple logo"><br>
-<img src="logo group_final-17.svg" alt="Apple logo"><br>
-<img src="logo group_final-18.svg" alt="Apple logo"><br>
-<body background="green"></body>
+<body style="background-color: silver;"></body>
+<img src="logo-vertical-1.svg" alt="Apple logo"><br>
+<img src="logo-vertical-1-reversed.svg" alt="Apple logo"><br>
+<img src="logo-vertical-2.svg" alt="Apple logo"><br>
+<img src="logo-vertical-2-reversed.svg" alt="Apple logo"><br>
+<img src="logo-vertical-3.svg" alt="Apple logo"><br>
+<img src="logo-horizental-1.svg" alt="Apple logo"><br>
+<img src="logo-horizental-1-reversed.svg" alt="Apple logo"><br>
+<img src="logo-horizental-2.svg" alt="Apple logo"><br>
+<img src="logo-horizental-2-reversed.svg" alt="Apple logo"><br>
+<img src="logo-horizental-3.svg" alt="Apple logo"><br> 
+<img src="logo-icon-1.svg" alt="Apple logo"><br>
+<img src="logo-icon-1-reversed.svg" alt="Apple logo"><br>
+<img src="logo-icon-2.svg" alt="Apple logo"><br>
+<img src="logo-icon-2-reversed.svg" alt="Apple logo"><br> 
