change brand font

--- a/about/about.html
+++ b/about/about.html
@@ -23,5 +23,9 @@
         find, execute, and get paid for advertisements seamlessly.
       </p>
     </div>
+    <div>
+      test
+    </div>
+    <div class="font-text">text2</div>
   </body>
 </html>
