--- a/brand_images/3. logo svg/Untitled-1.html
+++ b/brand_images/3. logo svg/Untitled-1.html
@@ -1,15 +1,12 @@
 <body style="background-color: silver;"></body>
+<div style="width: 400px;">
 <img src="logo-vertical-1.svg" alt="Apple logo"><br>
-<img src="logo-vertical-1-reversed.svg" alt="Apple logo"><br>
 <img src="logo-vertical-2.svg" alt="Apple logo"><br>
-<img src="logo-vertical-2-reversed.svg" alt="Apple logo"><br>
 <img src="logo-vertical-3.svg" alt="Apple logo"><br>
 <img src="logo-horizental-1.svg" alt="Apple logo"><br>
-<img src="logo-horizental-1-reversed.svg" alt="Apple logo"><br>
 <img src="logo-horizental-2.svg" alt="Apple logo"><br>
-<img src="logo-horizental-2-reversed.svg" alt="Apple logo"><br>
 <img src="logo-horizental-3.svg" alt="Apple logo"><br> 
 <img src="logo-icon-1.svg" alt="Apple logo"><br>
-<img src="logo-icon-1-reversed.svg" alt="Apple logo"><br>
 <img src="logo-icon-2.svg" alt="Apple logo"><br>
-<img src="logo-icon-2-reversed.svg" alt="Apple logo"><br> 
+<img src="logo-icon-3.svg" alt="Apple logo"><br> 
+</div>
