--- a/about/about.html
+++ b/about/about.html
@@ -1,31 +1,68 @@
 <html lang="ko-KR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Up - Linkplorer</title>
 
-    <link rel="stylesheet" href="about.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign Up - Linkplorer</title>
 
-  <body>
-    <header>
-      <div>
-        <img src="img/logo-horizental.png" />
+  <link rel="stylesheet" href="about.css" />
+</head>
+
+<body>
+  <header>
+    <nav class = "nav-bar">
+      <img class= "nav-bar-logo" src="img/logo-horizental-3.svg"/>
+      <div class="nav-bar-buttons">
         <button>log in</button>
-        <button>sign in free</button>
-      </div>
-    </header>
-    <div>
+      <button>sign in free</button>
+    </div>
+    </nav>
+  </header>
+
+  <main class="page-wrap">
+    <div class="context-box">
       <h1>Grow with Linkplorer</h1>
       <p>
-        <b>Linkplorer</b> is a link aggregation service designed to help
-        creators grow. Our unique campaign matching service allows creators to
-        find, execute, and get paid for advertisements seamlessly.
+        <b>Linkplorer</b> is a link in bio that helps creators grow. Our unique campaign matching service allows
+        creators
+        to find, execute, and get paid for advertisements with no effort.
       </p>
     </div>
-    <div>
-      test
-    </div>
-    <div class="font-text">text2</div>
-  </body>
+
+    <section class="context-box">
+      <h2>Earn with linkplorer</h2>
+      <p>You can easily monetize your creative activities.</p>
+      <div class="flex-row-elements">
+        <p class="element">
+          <span class="element-title"> step 1. connect </span>
+          <span class="element-body">One click is enough to start your journey.</span>
+        </p>
+        <p class="element">
+          <span class="element-title"> step 2. choose </span>
+          <span class="element-body">Select campaigns that align with your interests and audience.</span>
+        </p>
+        <p class="element">
+          <span class="element-title"> step 3. earn </span>
+          <span class="element-body">Get automatically tracked results and receive payments instantly.</span>
+        </p>
+      </div>
+      <p>The more your content performs, the more you get paid!</p>
+    </section>
+    <section class="context-box">
+      <h2> Maximize your growth with our advanced analytics tools!</h2>
+    </section>
+    <section class="context-box">
+      <h2>All features of Linkplorer are 100% free </h2>
+    </section> 
+  <section class="context-box">
+    <p>Join Linkplorer today and elevate your creative journey!</p>
+    <button>sign in free</button>
+    
+  </section>
+  </main>
+  <footer>
+    ddd
+  </footer>
+</body>
+
 </html>
