--- a/about/about.html
+++ b/about/about.html
@@ -10,55 +10,69 @@
 
 <body>
   <header>
-    <nav class = "nav-bar">
-      <img class= "nav-bar-logo" src="img/logo-horizental-3.svg"/>
+    <nav class="nav-bar">
+      <img class="nav-bar-logo" src="img/logo-horizental-3.svg" />
       <div class="nav-bar-buttons">
         <button>log in</button>
-      <button>sign in free</button>
-    </div>
+        <p>|</p>
+        <button>sign in free</button>
+      </div>
     </nav>
   </header>
 
   <main class="page-wrap">
-    <div class="context-box">
-      <h1>Grow with Linkplorer</h1>
-      <p>
-        <b>Linkplorer</b> is a link in bio that helps creators grow. Our unique campaign matching service allows
-        creators
-        to find, execute, and get paid for advertisements with no effort.
-      </p>
-    </div>
-
-    <section class="context-box">
-      <h2>Earn with linkplorer</h2>
-      <p>You can easily monetize your creative activities.</p>
-      <div class="flex-row-elements">
-        <p class="element">
-          <span class="element-title"> step 1. connect </span>
-          <span class="element-body">One click is enough to start your journey.</span>
-        </p>
-        <p class="element">
-          <span class="element-title"> step 2. choose </span>
-          <span class="element-body">Select campaigns that align with your interests and audience.</span>
-        </p>
-        <p class="element">
-          <span class="element-title"> step 3. earn </span>
-          <span class="element-body">Get automatically tracked results and receive payments instantly.</span>
-        </p>
+    <section class="content-box-1">
+      <div class="content">
+        <h1>Grow with Linkplorer</h1> 
+          <div class="text-and-image">
+            <p>
+              <strong>Linkplorer</strong> is a link in bio that helps creators grow. Our unique campaign matching service
+              allows
+              creators
+              to find, execute, and get paid for advertisements with no effort.
+            </p> 
+            <img src="img/logo-icon-1.svg" alt="Linkplorer Logo" width="200px">
+          </div> 
       </div>
-      <p>The more your content performs, the more you get paid!</p>
     </section>
-    <section class="context-box">
-      <h2> Maximize your growth with our advanced analytics tools!</h2>
+
+    <section class="content-box-2">
+      <div class="content">
+        <h2>Earn with linkplorer</h2>
+        <p>You can easily monetize your creative activities.</p>
+        <div class="flex-row-elements">
+          <p class="element">
+            <span class="element-title"> step 1. connect </span>
+            <span class="element-body">One click is enough to start your journey.</span>
+          </p>
+          <p class="element">
+            <span class="element-title"> step 2. choose </span>
+            <span class="element-body">Select campaigns that align with your interests and audience.</span>
+          </p>
+          <p class="element">
+            <span class="element-title"> step 3. earn </span>
+            <span class="element-body">Get automatically tracked results and receive payments instantly.</span>
+          </p>
+        </div>
+        <p>The more your content performs, the more you get paid!</p>
+      </div>
     </section>
-    <section class="context-box">
-      <h2>All features of Linkplorer are 100% free </h2>
-    </section> 
-  <section class="context-box">
-    <p>Join Linkplorer today and elevate your creative journey!</p>
-    <button>sign in free</button>
-    
-  </section>
+    <section class="content-box-3">
+      <div class="content">
+        <h2> Maximize your growth with our advanced analytics tools!</h2>
+      </div>
+    </section>
+    <section class="content-box-4">
+      <div class="content">
+        <h2>All features of Linkplorer are 100% free </h2>
+      </div>
+    </section>
+    <section class="content-box-5">
+      <div class="content">
+        <p>Join Linkplorer today and elevate your creative journey!</p>
+        <button>sign in free</button>
+      </div>
+    </section>
   </main>
   <footer>
     ddd
