--- a/about/about.html
+++ b/about/about.html
@@ -22,41 +22,62 @@
 
   <main class="page-wrap">
     <section class="content-box-1">
-      <div class="content">
-        <h1>Grow with Linkplorer</h1> 
+      <div class="content-background-filter">
+        <div class="content">
+          <h1>Grow with Linkplorer</h1>
           <div class="text-and-image">
             <p>
-              <strong>Linkplorer</strong> is a link in bio that helps creators grow. Our unique campaign matching service
+              <strong>Linkplorer</strong> is a link in bio that helps creators grow. Our unique campaign matching
+              service
               allows
               creators
               to find, execute, and get paid for advertisements with no effort.
-            </p> 
+            </p>
             <img src="img/logo-icon-1.svg" alt="Linkplorer Logo" width="200px">
-          </div> 
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="content-box-2">
-      <div class="content">
-        <h2>Earn with linkplorer</h2>
-        <p>You can easily monetize your creative activities.</p>
-        <div class="flex-row-elements">
-          <p class="element">
-            <span class="element-title"> step 1. connect </span>
-            <span class="element-body">One click is enough to start your journey.</span>
-          </p>
-          <p class="element">
-            <span class="element-title"> step 2. choose </span>
-            <span class="element-body">Select campaigns that align with your interests and audience.</span>
-          </p>
-          <p class="element">
-            <span class="element-title"> step 3. earn </span>
-            <span class="element-body">Get automatically tracked results and receive payments instantly.</span>
-          </p>
+      <div class="content-background-filter">
+        <div class="content">
+          <h2>Earn with linkplorer</h2>
+          <p class="sub-context">You can easily monetize your creative activities.</p>
+          <div class="flex-row-elements">
+            <div class="element">
+              <div class="element-title">
+                <div class="element-title-imgbox">
+                  <img src="img/step1.webp" alt="step 1 image">
+                  <span>connect</span>
+                </div>
+              </div>
+              <span class="element-body">One click is enough to start your journey.</span>
+            </div>
+            <div class="element">
+              <span class="element-title">
+                <div class="element-title-imgbox">
+                  <img src="img/step2.webp" alt="step 2 image">
+                </div>
+                choose
+              </span>
+              <span class="element-body">Select campaigns that align with your interests and audience.</span>
+            </div>
+            <div class="element">
+              <span class="element-title">
+                <div class="element-title-imgbox">
+                  <img src="img/step3.webp" alt="step 3 image">
+                </div>
+                earn
+              </span>
+              <span class="element-body">Get automatically tracked results and receive payments instantly.</span>
+            </div>
+          </div>
+          <p class="sub-context">The more your content performs, the more you get paid!</p>
         </div>
-        <p>The more your content performs, the more you get paid!</p>
       </div>
     </section>
+
     <section class="content-box-3">
       <div class="content">
         <h2> Maximize your growth with our advanced analytics tools!</h2>
