main format change

--- a/about/about.html
+++ b/about/about.html
@@ -21,74 +21,64 @@
   </header>
 
   <main class="page-wrap">
-    <section class="content-box-1">
-      <div class="content-background-filter">
-        <div class="content">
-          <h1>Grow with Linkplorer</h1>
-          <div class="text-and-image">
-            <p>
-              <strong>Linkplorer</strong> is a link in bio that helps creators grow. Our unique campaign matching
-              service
-              allows
-              creators
-              to find, execute, and get paid for advertisements with no effort.
-            </p>
-            <img src="img/logo-icon-1.svg" alt="Linkplorer Logo" width="200px">
-          </div>
-        </div>
+    <section class="content-1">
+      <div class="content">
+        <h1>Grow with Linkplorer</h1>
+        <p>
+          <strong>Linkplorer</strong> is a link in bio that helps creators grow.
+        </p>
+        <p>Our unique campaign matching service allows creators to find, execute, and get paid for advertisements with
+          no effort.
+        </p>
+
+      </div>
+     <p style="text-align: center;"> 
+       <button style="align-self: center"> sign in free</button>
+     </p>
+      <div class="images">
+        <img src="img/temp-phone.svg">
+        <img src="img/temp-phone.svg" style="margin-top: 80px;">
+        <img src="img/temp-phone.svg">
       </div>
     </section>
 
-    <section class="content-box-2">
-      <div class="content-background-filter">
-        <div class="content">
-          <h2>Earn with linkplorer</h2>
-          <p class="sub-context">You can easily monetize your creative activities.</p>
-          <div class="flex-row-elements">
-            <div class="element">
-              <div class="element-title">
-                <div class="element-title-imgbox">
-                  <img src="img/step1.webp" alt="step 1 image">
-                  <span>connect</span>
-                </div>
-              </div>
-              <span class="element-body">One click is enough to start your journey.</span>
-            </div>
-            <div class="element">
-              <span class="element-title">
-                <div class="element-title-imgbox">
-                  <img src="img/step2.webp" alt="step 2 image">
-                </div>
-                choose
-              </span>
-              <span class="element-body">Select campaigns that align with your interests and audience.</span>
-            </div>
-            <div class="element">
-              <span class="element-title">
-                <div class="element-title-imgbox">
-                  <img src="img/step3.webp" alt="step 3 image">
-                </div>
-                earn
-              </span>
-              <span class="element-body">Get automatically tracked results and receive payments instantly.</span>
-            </div>
-          </div>
-          <p class="sub-context">The more your content performs, the more you get paid!</p>
-        </div>
+    <section class="content-2">
+      <div class="content">
+        <h2>Earn with linkplorer</h2>
+        <p class="sub-context">You can easily monetize your creative activities.</p>
+        <ol>
+          <li>
+            <img src="img/step1.webp" alt="step 1 image">
+            <span>connect</span>
+            <span>One click is enough to start your journey.</span>
+          </li>
+          <li>
+            <img src="img/step2.webp" alt="step 2 image">
+            choose
+            <span>Select campaigns that align with your interests and audience.</span>
+          </li>
+          <li>
+            <img src="img/step3.webp" alt="step 3 image">
+            earn
+            <span>Get automatically tracked results and receive payments instantly.</span>
+          </li>
+        </ol>
+        <p class="sub-context">The more your content performs, the more you get paid!</p>
       </div>
     </section>
 
-    <section class="content-box-3">
+    <section class="content-3">
+
       <div class="content">
         <h2> Maximize your growth with our advanced analytics tools!</h2>
       </div>
     </section>
-    <section class="content-box-4">
+    <section class="content-4">
       <div class="content">
         <h2>All features of Linkplorer are 100% free </h2>
       </div>
     </section>
-    <section class="content-box-5">
+    <section class="content-5">
       <div class="content">
         <p>Join Linkplorer today and elevate your creative journey!</p>
         <button>sign in free</button>
