--- a/about/about.html
+++ b/about/about.html
@@ -11,11 +11,11 @@
 <body>
   <header>
     <nav class="nav-bar">
-      <img class="nav-bar-logo" src="img/logo-horizental-3.svg" />
+      <img class="nav-bar-logo" src="img/logo-horizental-2.svg" />
       <div class="nav-bar-buttons">
-        <button>log in</button>
+        <button class="button-default button-log-in">log in</button>
         <p>|</p>
-        <button>sign in free</button>
+        <button class="button-default button-sign-in">sign in free</button>
       </div>
     </nav>
   </header>
@@ -24,24 +24,17 @@
     <section class="content-1">
       <div class="content">
         <h1>Grow with Linkplorer</h1>
-        <p>
-          <strong>Linkplorer</strong> is a link in bio that helps creators grow.
-        </p>
-        <p>Our unique campaign matching service allows creators to find, execute, and get paid for advertisements with
-          no effort.
-        </p>
-
-      </div>
-     <p style="text-align: center;"> 
-       <button style="align-self: center"> sign in free</button>
-     </p>
-      <div class="images">
-        <img src="img/temp-phone.svg">
-        <img src="img/temp-phone.svg" style="margin-top: 80px;">
-        <img src="img/temp-phone.svg">
-      </div>
+        <p> <strong>Linkplorer</strong> is a link in bio that helps creators grow. </p>
+        <p>Our unique campaign matching service allows creators</p>
+        <p> to find, execute, and get paid for advertisements with no effort. </p>
+        <button class="button-default button-sign-in"> sign in free</button>
+     
     </section>
-
+   <div class="phone-images">
+          <img src="img/temp-phone.svg">
+          <img src="img/temp-phone.svg" style="margin-top: 80px;">
+          <img src="img/temp-phone.svg">
+        </div>
     <section class="content-2">
       <div class="content">
         <h2>Earn with linkplorer</h2>
