about 2nd section

--- a/about/about.html
+++ b/about/about.html
@@ -14,7 +14,6 @@
       <img class="nav-bar-logo" src="img/logo-horizental-2.svg" />
       <div class="nav-bar-buttons">
         <button class="button-default button-log-in">log in</button>
-        <p>|</p>
         <button class="button-default button-sign-in">sign in free</button>
       </div>
     </nav>
@@ -24,39 +23,39 @@
     <section class="content-1">
       <div class="content">
         <h1>Grow with Linkplorer</h1>
-        <p> <strong>Linkplorer</strong> is a link in bio that helps creators grow. </p>
-        <p>Our unique campaign matching service allows creators</p>
-        <p> to find, execute, and get paid for advertisements with no effort. </p>
+        <p> <strong>Linkplorer</strong> is a link in bio that helps creators grow. <br>
+          Our unique campaign matching service allows creators to find, execute, and get paid for advertisements with no
+          effort. </p>
         <button class="button-default button-sign-in"> sign in free</button>
-     
+
     </section>
-   <div class="phone-images">
-          <img src="img/temp-phone.svg">
-          <img src="img/temp-phone.svg" style="margin-top: 80px;">
-          <img src="img/temp-phone.svg">
-        </div>
+    <div class="phone-images">
+      <img src="img/temp-phone.svg">
+      <img src="img/temp-phone.svg" style="margin-top: 80px;">
+      <img src="img/temp-phone.svg">
+    </div>
     <section class="content-2">
       <div class="content">
         <h2>Earn with linkplorer</h2>
-        <p class="sub-context">You can easily monetize your creative activities.</p>
+        <p class="sub-context">You can easily monetize your creative activities.<br>
+         The more your content performs, the more you get paid!</p>
         <ol>
           <li>
-            <img src="img/step1.webp" alt="step 1 image">
-            <span>connect</span>
-            <span>One click is enough to start your journey.</span>
+            <h3>CONNECT</h3>
+            <div><img src="img/icon-card-1.svg" alt="step 1 image"></div>
+            <p>One click is enough to start your journey.</p>
           </li>
           <li>
-            <img src="img/step2.webp" alt="step 2 image">
-            choose
-            <span>Select campaigns that align with your interests and audience.</span>
+            <h3>CHOOSE</h3>
+            <div><img src="img/icon-card-2.svg" alt="step 2 image"></div>
+            <p>Select campaigns that align with your interests and audience.</p>
           </li>
           <li>
-            <img src="img/step3.webp" alt="step 3 image">
-            earn
-            <span>Get automatically tracked results and receive payments instantly.</span>
+            <h3>EARN</h3>
+            <div><img src="img/icon-card-3.svg" alt="step 3 image"></div>
+            <p>Get automatically tracked results and receive payments instantly.</p>
           </li>
         </ol>
-        <p class="sub-context">The more your content performs, the more you get paid!</p>
       </div>
     </section>
 
@@ -74,7 +73,7 @@
     <section class="content-5">
       <div class="content">
         <p>Join Linkplorer today and elevate your creative journey!</p>
-        <button>sign in free</button>
+        <button class="button-sign-in button-default">sign in free</button>
       </div>
     </section>
   </main>
