--- a/about/about.html
+++ b/about/about.html
@@ -14,8 +14,8 @@
     <nav class="nav-bar">
       <img class="nav-bar-logo" src="img/logo-horizental-2.svg" />
       <div class="nav-bar-buttons">
-        <button class="button-default button-log-in">log in</button>
-        <button class="button-default button-sign-in">sign in free</button>
+        <button class="button-default button-log-in">Log in</button>
+        <button class="button-default button-sign-in">Sign in free</button>
       </div>
     </nav>
   </header>
@@ -37,24 +37,32 @@
     </div>
     <section class="content-2">
       <div class="content">
-        <h2>Earn with linkplorer</h2>
-        <p class="sub-context">You can easily monetize your creative activities.<br>
-         The more your content performs, the more you get paid!</p>
+        <div class="content-wrapper">
+          <h2>Earn with linkplorer</h2>
+          <p class="sub-context">You can easily monetize your creative activities.<br>
+            The more your content performs, the more you get paid!</p>
+        </div>
         <ol>
           <li>
-            <h3>CONNECT</h3>
-            <div><img src="img/icon-card-1.svg" alt="step 1 image"></div>
-            <p>One click is enough to start your journey.</p>
+            <div class="content-wrapper">
+              <h3>CONNECT</h3>
+              <p>One click is enough to start your journey.</p>
+            </div>
+            <div class="image-wrapper"><img src="img/icon-card-1.svg" alt="step 1 image"></div>
           </li>
           <li>
-            <h3>CHOOSE</h3>
-            <div><img src="img/icon-card-2.svg" alt="step 2 image"></div>
-            <p>Select campaigns that align with your interests and audience.</p>
+            <div class="content-wrapper">
+              <h3>CHOOSE</h3>
+              <p>Select campaigns that align with your interests and audience.</p>
+            </div>
+            <div class="image-wrapper"><img src="img/icon-card-2.svg" alt="step 2 image"></div>
           </li>
           <li>
-            <h3>EARN</h3>
-            <div><img src="img/icon-card-3.svg" alt="step 3 image"></div>
-            <p>Get automatically tracked results and receive payments instantly.</p>
+            <div class="content-wrapper">
+              <h3>EARN</h3>
+              <p>Get automatically tracked results and receive payments instantly.</p>
+            </div>
+            <div class="image-wrapper"><img src="img/icon-card-3.svg" alt="step 3 image"></div>
           </li>
         </ol>
       </div>
@@ -74,7 +82,7 @@
     <section class="content-5">
       <div class="content">
         <p>Join Linkplorer today and elevate your creative journey!</p>
-        <button class="button-sign-in button-default">sign in free</button>
+        <button class="button-sign-in button-default">Sign in free</button>
       </div>
     </section>
   </main>
