--- a/about/about.html
+++ b/about/about.html
@@ -71,16 +71,21 @@
     <section class="content-3">
 
       <div class="content">
+        <div class="content-wrapper">
         <h2> Maximize your growth with our advanced analytics tools!</h2>
+        </div>
+        <div class ="image-wrapper">
+          <img src = "img/sample_ms.png">
+        </div>
       </div>
     </section>
     <section class="content-4">
       <div class="content">
-        <h2>All features of Linkplorer are 100% free </h2>
       </div>
     </section>
     <section class="content-5">
       <div class="content">
+        <h2>All features of Linkplorer are 100% free! </h2>
         <p>Join Linkplorer today and elevate your creative journey!</p>
         <button class="button-sign-in button-default">Sign in free</button>
       </div>
