--- a/about/about.html
+++ b/about/about.html
@@ -27,7 +27,7 @@
         <p> <strong>Linkplorer</strong> is a link in bio that helps creators grow. <br>
           Our unique campaign matching service allows creators to find, execute, and get paid for advertisements with no
           effort. </p>
-        <button class="button-default button-sign-in"> sign in free</button>
+        <button class="button-default button-sign-in"> Sign in free</button>
 
     </section>
     <div class="phone-images">
