change content-2 form

--- a/about/about.html
+++ b/about/about.html
@@ -32,37 +32,32 @@
     </section>
     <div class="phone-images">
       <img src="img/temp-phone.svg">
-      <img src="img/temp-phone.svg" style="margin-top: 80px;">
+      <img src="img/temp-phone.svg" style="margin:0 -50; width:310; z-index:1">
       <img src="img/temp-phone.svg">
     </div>
     <section class="content-2">
       <div class="content">
-        <div class="content-wrapper">
-          <h2>Earn with linkplorer</h2>
-          <p class="sub-context">You can easily monetize your creative activities.<br>
-            The more your content performs, the more you get paid!</p>
-        </div>
+        <h2>Earn with linkplorer</h2>
+        <p class="sub-context">You can easily monetize your creative activities.<br>
+          The more your content performs, the more you get paid!</p>
         <ol>
           <li>
-            <div class="content-wrapper">
-              <h3>CONNECT</h3>
-              <p>One click is enough to start your journey.</p>
-            </div>
-            <div class="image-wrapper"><img src="img/icon-card-1.svg" alt="step 1 image"></div>
+            <img src="img/icon-1.webp" alt="step 1 image"> 
+              <h3>Step.1</h3>
+              <h4>CONNECT</h4>
+              <p>One click is enough to start your journey.</p> 
           </li>
           <li>
-            <div class="content-wrapper">
-              <h3>CHOOSE</h3>
+            <img src="img/icon-2.webp" alt="step 2 image">
+              <h3>Step.2</h3>
+              <h4>CHOOSE</h4>
               <p>Select campaigns that align with your interests and audience.</p>
-            </div>
-            <div class="image-wrapper"><img src="img/icon-card-2.svg" alt="step 2 image"></div>
           </li>
           <li>
-            <div class="content-wrapper">
-              <h3>EARN</h3>
+            <img src="img/icon-3.webp" alt="step 3 image">
+              <h3>Step.3</h3>
+              <h4>EARN</h4>
               <p>Get automatically tracked results and receive payments instantly.</p>
-            </div>
-            <div class="image-wrapper"><img src="img/icon-card-3.svg" alt="step 3 image"></div>
           </li>
         </ol>
       </div>
@@ -72,10 +67,10 @@
 
       <div class="content">
         <div class="content-wrapper">
-        <h2> Maximize your growth with our advanced analytics tools!</h2>
+          <h2> Maximize your growth with our advanced analytics tools!</h2>
         </div>
-        <div class ="image-wrapper">
-          <img src = "img/sample_ms.png">
+        <div class="image-wrapper">
+          <img src="img/sample_ms.png">
         </div>
       </div>
     </section>
