--- a/about/about.html
+++ b/about/about.html
@@ -29,12 +29,11 @@
           effort. </p>
         <button class="button-default button-sign-in"> Sign in free</button>
 
+        <div class="phone-images"> 
+          <img src="img/temp-phone.svg">
+        </div>
+      </div>
     </section>
-    <div class="phone-images">
-      <img src="img/temp-phone.svg">
-      <img src="img/temp-phone.svg" style="margin:0 -50; width:310; z-index:1">
-      <img src="img/temp-phone.svg">
-    </div>
     <section class="content-2">
       <div class="content">
         <h2>Earn with linkplorer</h2>
@@ -42,22 +41,22 @@
           The more your content performs, the more you get paid!</p>
         <ol>
           <li>
-            <img src="img/icon-1.webp" alt="step 1 image"> 
-              <h3>Step.1</h3>
-              <h4>CONNECT</h4>
-              <p>One click is enough to start your journey.</p> 
+            <img src="img/icon-1.webp" alt="step 1 image">
+            <h3>Step.1</h3>
+            <h4>CONNECT</h4>
+            <p>One click is enough to start your journey.</p>
           </li>
           <li>
             <img src="img/icon-2.webp" alt="step 2 image">
-              <h3>Step.2</h3>
-              <h4>CHOOSE</h4>
-              <p>Select campaigns that align with your interests and audience.</p>
+            <h3>Step.2</h3>
+            <h4>CHOOSE</h4>
+            <p>Select campaigns that align with your interests and audience.</p>
           </li>
           <li>
             <img src="img/icon-3.webp" alt="step 3 image">
-              <h3>Step.3</h3>
-              <h4>EARN</h4>
-              <p>Get automatically tracked results and receive payments instantly.</p>
+            <h3>Step.3</h3>
+            <h4>EARN</h4>
+            <p>Get automatically tracked results and receive payments instantly.</p>
           </li>
         </ol>
       </div>
@@ -68,26 +67,28 @@
       <div class="content">
         <div class="content-wrapper">
           <h2> Maximize your growth with our advanced analytics tools!</h2>
+          <p class="sub-context"> 우리꺼는여 실시간으로 로그도 볼 수 있구여, 구체적인 지표를 제공해서 당신의 컨텐츠를 분석해준다구여(아마도) <br><br>그러니 한번 써보시라구요!       </p>
+          <button class="button-default button-sign-in ">Sign in free</button>
         </div>
         <div class="image-wrapper">
-          <img src="img/sample_ms.png">
+          <img src="img/sample_ms.svg">
         </div>
       </div>
     </section>
-    <section class="content-4">
+    <section class="content-4"> 
       <div class="content">
-      </div>
-    </section>
-    <section class="content-5">
-      <div class="content">
-        <h2>All features of Linkplorer are 100% free! </h2>
-        <p>Join Linkplorer today and elevate your creative journey!</p>
-        <button class="button-sign-in button-default">Sign in free</button>
+        <h2>All features of Linkplorer are <strong> 100% free!</strong></h2>
+        <p class="sub-context">Join Linkplorer today and elevate your creative journey!</p>
+       
+        <button class="button-default button-sign-in ">Get started -- It's free</button>
+      
       </div>
     </section>
   </main>
   <footer>
-    ddd
+    <div class="content">
+    [개인정보처리방침]  [어쩌고]  [문의하기]  <img src="img/logo-instagram.svg">
+   </div>
   </footer>
 </body>
 
